# qt-cctalk

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cctalk/: CMakeLists.txt  bill_validator_device.h  cctalk_device.cpp  cctalk_device.h  cctalk_enums.h  cctalk_link_controller.cpp  cctalk_link_controller.h  coin_acceptor_device.h  serial_worker.cpp  serial_worker.h
cctalk/helpers/: CMakeLists.txt  async_serializer.cpp  async_serializer.h  debug.cpp  debug.h  debug_qt_bridge.h
test_gui/: CMakeLists.txt  app_settings.cpp  app_settings.h  cctalk_tools.h  gui_application.cpp  gui_application.h  gui_main.cpp  logging_tools.h  main_tools.h  main_window.cpp  main_window.h  main_window.ui
